# KLogger

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
Code/: mainpage.dox
Code/Include/: ConsoleLogger.hpp  Dummy.hpp  FileLogger.hpp  LogChannel.hpp  LogContent.hpp  LogLevel.hpp  Logger.hpp  SizeUtils.hpp
Code/Interface/: ILogger.hpp
Code/Source/: Dummy.cpp  Logger.cpp
Libs/: CMakeLists.txt
Test/: CMakeLists.txt  Main.cpp
